--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "geist": "^1.3.1",
     "jose": "^5.10.0",
-    "next": "14.1.0",
+    "next": "^15.1.0",
     "next-auth": "^5.0.0-beta.29",
     "next-intl": "^3.26.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.4.1",
     "zod": "^3.25.76",
@@ -39,12 +40,12 @@
     "@types/node": "^20.19.11",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
+    "eslint-config-next": "^15.1.0",
+    "postcss": "^8.4.49",
     "prettier": "^3.2.0",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
